# copo-do-mundo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  copo-do-mundo_2.py  copo_do_mundo_1.py  copo_do_mundo_oficial.py  docker-compose.yml  env.example  main.py  pyproject.toml  utils.py  votos_drinks.csv
.github/workflows/: deploy.yml  hibernate.yml  test.yml  wake-up.yml
.streamlit/: config.toml
_old_files/: copo-do-mundo_2.py  copo_do_mundo.ipynb  copo_do_mundo_1.py  copo_do_mundo_oficial.py
backend/data/: data_manager.py  vote_manager.py
backend/image/: image_manager.py
backend/validation/: validators.py
deploy/gcp/: Dockerfile  README.md  cloudbuild.yaml
docs/: README.md  api.md  architecture.md  deploy.md  deployment.md  development.md  migration.md  setup.md  user_manual.md
experimentacao/: .env.example  exemplo_gspread_drive.py
frontend/: main.py
frontend/components/: admin.py  voting.py
frontend/utils/: anonymizer.py  cache_manager.py  session_manager.py  ui_utils.py
infra/: gcp-setup.sh
scripts/: migrate_data.py
src/: config.py  main.py
src/backend/data/: data_manager.py  vote_manager.py
src/backend/image/: image_manager.py
src/backend/utils/: circuit_breaker.py  quota_manager.py  rate_limiter.py  retry.py  usage_estimator.py  validators.py
src/backend/validation/: validators.py
src/frontend/: main.py
src/frontend/components/: admin.py  voting.py
src/frontend/utils/: anonymizer.py  cache_manager.py  ui_utils.py  (+1 more)
tests/: conftest.py  test_admin.py  test_anonymizer.py  test_auth.py  test_voting.py
(+7 files in other folders)
